--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
         </div>
         
         <!-- Image Section -->
-        <div class="image-container">
-            <img src="Belen.png" alt="Imagen Principal" class="main-image">
-        </div>
+        <img src="Belen.png" alt="Imagen Principal"  width="80%" height="auto">
+        
     </div>
 
     <script>
