--- a/index.html
+++ b/index.html
@@ -144,10 +144,16 @@
         const ctx = canvas.getContext('2d');
         let isDrawing = false;
 
+        // Funciones para dibujar con mouse
         canvas.addEventListener('mousedown', startDrawing);
         canvas.addEventListener('mousemove', draw);
         canvas.addEventListener('mouseup', stopDrawing);
         canvas.addEventListener('mouseout', stopDrawing);
+
+        // Funciones para dibujar con touch
+        canvas.addEventListener('touchstart', startTouchDrawing);
+        canvas.addEventListener('touchmove', drawTouch);
+        canvas.addEventListener('touchend', stopDrawing);
 
         function startDrawing(e) {
             isDrawing = true;
@@ -161,6 +167,27 @@
             ctx.strokeStyle = '#4a4e69';
             ctx.lineWidth = 2;
             ctx.stroke();
+        }
+
+        function startTouchDrawing(e) {
+            isDrawing = true;
+            const touch = e.touches[0];
+            const touchX = touch.clientX - canvas.getBoundingClientRect().left;
+            const touchY = touch.clientY - canvas.getBoundingClientRect().top;
+            ctx.beginPath();
+            ctx.moveTo(touchX, touchY);
+        }
+
+        function drawTouch(e) {
+            if (!isDrawing) return;
+            const touch = e.touches[0];
+            const touchX = touch.clientX - canvas.getBoundingClientRect().left;
+            const touchY = touch.clientY - canvas.getBoundingClientRect().top;
+            ctx.lineTo(touchX, touchY);
+            ctx.strokeStyle = '#4a4e69';
+            ctx.lineWidth = 2;
+            ctx.stroke();
+            e.preventDefault(); // Prevenir desplazamiento de la pantalla
         }
 
         function stopDrawing() {
