--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
         <!-- Canvas Container -->
         <div class="canvas-container" id="canvasContainer">
-            <canvas id="drawingCanvas" width="400" height="400"></canvas>
+            <canvas id="drawingCanvas" width="auto" height="100"></canvas>
             <div class="canvas-actions">
                 <button class="clear-button" onclick="clearCanvas()">Borrar</button>
                 <button class="send-button" onclick="sendDrawing()">Enviar</button>
